--- a/client/app/items/items.css
+++ b/client/app/items/items.css
@@ -1,34 +1,33 @@
-.thing-form {
-    margin: 20px 0;
+.title {
+    border-bottom: 1px solid grey;
+    margin-bottom: 15px;
 }
 
-#banner {
-    border-bottom: none;
-    margin-top: -20px;
+.search-form {
+    padding-bottom: 15px;
+    border-bottom: 1px solid grey;
 }
 
-#banner h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+.item-list {
 }
-
-.hero-unit {
-    position: relative;
-    padding: 30px 15px;
-    color: #F5F5F5;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
+.item-list .the-item {
+    border-bottom: 1px solid grey;
 }
-
-.footer {
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 70px;
-    border-top: 1px solid #E5E5E5;
+.item-list .the-item .item-thumbnail {
+    display: inline-block;
+    float: left;
+    width: 30%
 }
-
-.navbar-text {
-    margin-left: 15px;
+.item-list .the-item .item-thumbnail img {
+    width: 100%;
+}
+.item-list .the-item .item-title {
+    display: inline-block;
+    float: left;
+    width: 50%;
+}
+.item-list .the-item .item-price {
+    display: inline-block;
+    float: left;
+    width: 20%;
 }
